# hug-scm

./: .gitignore  .qoderignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  COMMAND_REFACTORING.md  IMPLEMENTATION_NOTES_VHS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MERCURIAL_IMPLEMENTATION.md  Makefile  README.md  SCREENSHOT_GENERATION.md  TAG_TEST_FIXES_SUMMARY.md  TESTING.md  TODO-analysis-implementation.md  errors-grouped.txt  errors.txt  gum-testing-simplification-summary.md  install.sh  package-lock.json  package.json  run-tests.sh  semantic-count-test.txt  skipped-tests-analysis.yaml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: README.md  copilot-instructions.md  copilot-setup.sh  dependabot.yml  devcontainer.json
.github/scripts/: setup-codespace.sh  setup-devcontainer.sh
.vitepress/: config.js
completions/: hug-completion.bash  hug.fish
docs/: DOCS_ORGANIZATION.md  VHS_CI_INTEGRATION.md  VHS_IMPROVEMENTS.md  cheat-sheet.md  command-map.md  cookbook.md  core-concepts.md  getting-started.md  git-to-hug.md  hug-for-beginners.md  hug-for-developers.md  index.md  installation.md  practical-workflows.md  workflows.md
git-config/: .gitconfig  CLAUDE.md  activate  hug-completion-reference.md  install.sh
git-config/lib/python/: .gitignore  README.md  activity.py  articles_loader.py  category_meta.py  churn.py  co_changes.py  deps.py  help_search.py  hug_git_branch.py  json_transform.py  log_json.py  ownership.py  pyproject.toml  requirements.txt
git-config/lib/python/articles/: agents.md  hug-101.md
git-config/lib/python/categories/: analysis.toml  branching.toml  committing.toml  files.toml  garbage.toml  head.toml  history.toml  merge.toml  parking.toml  push-pull.toml  rebase.toml  show.toml  staging.toml  statistics.toml  status.toml  tags.toml  utilities.toml  working-dir.toml  worktrees.toml
git-config/lib/python/git/: __init__.py  branch_filter.py  branch_select.py  search.py  selection_core.py  tag_select.py  worktree.py  worktree_select.py  worktree_validate.py
git-config/lib/python/tests/: CLAUDE.md  __init__.py  conftest.py  test_activity.py  test_articles_loader.py  test_branch_filter.py  test_branch_select.py  test_category_meta.py  test_churn.py  test_co_changes.py  test_help_search.py  test_hug_git_branch.py  test_json_transform.py  test_log_json.py  test_ownership.py  test_quality_corpus.py  test_search.py  test_selection_core.py  test_tag_select.py  test_worktree.py  test_worktree_select.py
git-config/lib/python/tests/fixtures/: README.md  conftest.py  generate_mocks.py  player.py  recorder.py  sonnet-review.md  test_example.py
git-config/lib/python/tests/fixtures/articles/: hug-test.md  zzz-second.md
git-config/lib/python/tests/fixtures/articles_bad/: long_summary.md  missing_title.md  no_fences.md
git-config/lib/python/tests/fixtures/mocks/: .gitignore
git-config/lib/python/tests/fixtures/mocks/git/log/: L-line.toml  activity.toml  binary-errors.toml  follow.toml  search.toml
git-config/lib/python/tests/fixtures/mocks/git/log/outputs/: L-line-basic.txt  L-line-no_commits.txt  activity_burst.txt  activity_weekend.txt  follow-basic.txt  search_code_match.txt  search_message_match.txt  search_with_files.txt
git-config/lib/python/tests/fixtures/test-repos/: churn-basic.sh  churn-binary.sh
git-config/lib/python/tests/fixtures/test-repos/git/: activity-burst.sh  activity-weekend.sh  churn-basic.sh  churn-binary.sh  churn-with-since.sh  search-commits.sh
hg-config/: .hgrc  README.md  activate  install.sh
hug-scm-mcp-server/: ARCHITECTURE.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  USAGE.md  junit.xml  pyproject.toml
hug-scm-mcp-server/src/hug_scm_mcp_server/: __init__.py  command_executor.py  server.py  tool_definitions.py  tool_handlers.py
hug-scm-mcp-server/tests/: __init__.py  conftest.py  test_command_executor.py  test_server.py  test_tool_handlers.py
planning/: TEST_REWRITE_PLAN.md
skills/: README.md  SKILL.md
tests/: CLAUDE.md  README.md  run-tests.sh  test_helper.bash  test_submodule_helper.bats
(+347 files in other folders)
