[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hug-scm-python-helpers"
version = "1.0.0"
description = "Python analysis helpers for Hug SCM"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Hug SCM Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "orgecc-command-mock>=0.1.5"
]

[tool.setuptools]
py-modules = ["activity", "churn", "co_changes", "ownership"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
enhanced = [
    "numpy>=1.20.0",
    "plotext>=5.0.0",
    "networkx>=2.6.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disable_error_code = ["annotation-unchecked", "var-annotated", "arg-type", "assignment", "operator", "index", "return-value", "valid-type", "import-untyped", "import-not-found"]
no_implicit_optional = false
